@@ -1,5 +1,10 @@
 2011-09-13  Albert Chu <chu11@llnl.gov>
 
+	* ipmipower/: Do not poll stdin when operating in non-interactive
+	mode.
+	
+2011-09-13  Albert Chu <chu11@llnl.gov>
+
 	* libfreeipmi/src/interpret/: Support cooling device redundancy
 	interpretation.
 
